--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,5 +1,3 @@
 FROM nginx:1.11-alpine
 
-COPY web/index.html /usr/share/nginx/html/index.html
-COPY web/img /usr/share/nginx/html/img
-COPY web/css /usr/share/nginx/html/css
+COPY build /usr/share/nginx/html
