--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '2'
 
 services:
   app:
+    restart: always
     container_name: lucasvanlierop-website
     image: lucasvanlierop/website
     build:
