--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,10 @@
 version: '2'
 
+networks:
+  web:
+  back:
+    driver: bridge
+
 services:
   app:
     restart: always
@@ -10,3 +15,47 @@ services:
       dockerfile: ./docker/app/Dockerfile
     ports:
       - 80:80
+    volumes_from:
+      - piwik
+    environment:
+      VIRTUAL_HOST:
+    networks:
+    - back
+    - web
+
+  piwik:
+    container_name: lucasvanlierop-website-piwik
+    image: piwik
+    links:
+      - piwik-db
+    volumes:
+      - ./piwik-config:/var/www/html/config
+    networks:
+    - back
+
+  piwik-db:
+      container_name: lucasvanlierop-website-piwik-db
+      image: mysql:5.7
+      volumes:
+        - ./var/mysql:/var/lib/mysql
+      environment:
+        MYSQL_ROOT_PASSWORD:
+      networks:
+      - back
+
+  piwik-cron:
+    container_name: lucasvanlierop-website-piwik-cron
+    image: piwik
+    volumes_from:
+      - piwik
+    entrypoint: |
+      bash -c 'bash -s <<EOF
+      trap "break;exit" SIGHUP SIGINT SIGTERM
+      while /bin/true; do
+        su -s "/bin/bash" -c "/usr/local/bin/php /var/www/html/console core:archive" www-data
+        sleep 3600
+      done
+      EOF'
+    networks:
+    - back
+
