--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -2,3 +2,4 @@ FROM nginx:1.11-alpine
 
 RUN rm -rf build /usr/share/nginx/html
 COPY build /usr/share/nginx/html
+COPY docker/app/nginx.conf /etc/nginx/nginx.conf
