Don't login at docker hub when build is a PR

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,7 @@ after_failure:
   - docker-compose logs
 
 after_success:
-  - docker login --username=$DOCKER_USERNAME --password=$DOCKER_PASSWORD
-  - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then docker push lucasvanlierop/website:latest; fi
+  - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then docker login --username=$DOCKER_USERNAME --password=$DOCKER_PASSWORD && docker push lucasvanlierop/website:latest; fi
 
 branches:
   only:
