--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,31 @@
 version: '2'
 
+networks:
+  traefik:
+    external:
+      name: traefik_webgateway
+
 services:
   app:
-    restart: always
-    container_name: lucasvanlierop-website
-    image: lucasvanlierop/website
-    build:
-      context: ./
-      dockerfile: ./docker/app/Dockerfile
+    extends:
+      file: env/default/docker-compose.yml
+      service: app
+    volumes:
+      - ./build:/usr/share/nginx/html
+    networks:
+      default:
+      traefik:
+    labels:
+      - "traefik.backend=lucasvanlierop-web"
+      - "traefik.frontend.rule=Host:lucasvanlierop.nl.localhost"
+      - "traefik.port=80"
+      - "traefik.docker.network=traefik_webgateway"
+  sass:
+    extends:
+      file: env/default/docker-compose.yml
+      service: sass
+
+  spress:
+    extends:
+      file: env/default/docker-compose.yml
+      service: spress
