--- a/env/prod/docker-compose.yml
+++ b/env/prod/docker-compose.yml
@@ -3,7 +3,7 @@ version: '2'
 services:
   app:
     extends:
-      file: docker-compose.yml
+      file: ../default/docker-compose.yml
       service: app
     ports:
       - 80:80
