Paths to dockerfile should be relative

--- a/env/ci/docker-compose.yml
+++ b/env/ci/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       service: app
     build:
       context: ../../
-      dockerfile: ../../docker/app/Dockerfile
+      dockerfile: docker/app/Dockerfile
   sass:
     extends:
       file: ../default/docker-compose.yml
