--- a/env/default/docker-compose.yml
+++ b/env/default/docker-compose.yml
@@ -2,12 +2,12 @@ version: '2'
 
 services:
   app:
-    restart: on_failure
+    restart: on-failure
     container_name: lucasvanlierop-website
     image: lucasvanlierop/website
 
   sass:
-    restart: on_failure
+    restart: on-failure
     container_name: lucasvanlierop-website-sass
     image: lucasvanlierop/website-sass
     build:
@@ -19,10 +19,10 @@ services:
       - ../../:/app
 
   spress:
-    restart: on_failure
     container_name: lucasvanlierop-website-spress
     image: pantelm/spress
     command: site:build --watch
+    restart: on-failure
     user: $HOST_UID:$HOST_GID
     volumes:
       - ../../:/app
