First attempt to migrate to sculpin

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
-/build
-/src/content/css
+/source/css
+/.sculpin/
+/app/cache/*
+/app/config/sculpin_kernel_*.yml
+/app/config/sculpin_site_*.yml
+/app/logs/*
+/output_*/
+/source/components/
+/vendor/
