--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:1.11-alpine
 
 RUN rm -rf build /usr/share/nginx/html
-COPY build /usr/share/nginx/html
+COPY output_prod /usr/share/nginx/html
