--- a/env/default/docker-compose.yml
+++ b/env/default/docker-compose.yml
@@ -13,16 +13,21 @@ services:
     build:
       context: ../../
       dockerfile: docker/sass/Dockerfile
-    command: --watch /app/src/scss:/app/src/content/css
+    command: --watch /app/source/scss:/app/source/css
     user: $HOST_UID:$HOST_GID
     volumes:
       - ../../:/app
 
-  spress:
-    container_name: lucasvanlierop-website-spress
-    image: pantelm/spress
-    command: site:build --watch
+  sculpin:
+    build:
+      context: ../../docker/sculpin
     restart: on-failure
+    container_name: lucasvanlierop-website-sculpin
     user: $HOST_UID:$HOST_GID
+    working_dir: /app
+    environment:
+      HOME: /home
     volumes:
       - ../../:/app
+      - ~/.composer:/home/.composer
+    command: vendor/bin/sculpin generate --watch
