Atom feed requires absolute url's

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,5 +39,7 @@ services:
         composer install \
         && bin/generate-pygments-css \
         && rm -rf output_dev/* \
-        && vendor/bin/sculpin generate --watch \
+        && vendor/bin/sculpin generate \
+          --url=http://lucasvanlierop.nl.localhost \
+          --watch
       '
