Store url in config

--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -4,6 +4,7 @@
 # Note these values are not used yet!
 title: Lucas van Lierop Blog
 subtitle: About software development, cars, music and more
+url: lucasvanlierop.nl
 
 # Insert your disqus shortname
 disqus:
