--- a/env/prod/docker-compose.yml
+++ b/env/prod/docker-compose.yml
@@ -1,7 +1,21 @@
 version: '3'
 
 services:
-   app:
-      image: lucasvanlierop/website
-      ports:
-        - 80:80
+  # Should be moved to a separate repo
+  ingress:
+    image: traefik:1.3-alpine
+    command: --docker --debug --docker.exposedbydefault=false --logLevel=DEBUG
+    ports:
+      - 80:80
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - /dev/null:/traefik.toml
+
+  app:
+    image: lucasvanlierop/website
+    labels:
+      - "traefik.enable=true"
+      - "traefik.backend=lucasvanlierop-web"
+      - "traefik.frontend.rule=Host:lucasvanlierop.nl,www.lucasvanlierop.nl"
+      - "traefik.port=80"
+      - "traefik.docker.network=lucasvanlierop-website_default"
