Adds ruby sass requirements that weren't required before

--- a/docker/sass/Dockerfile
+++ b/docker/sass/Dockerfile
@@ -1,5 +1,15 @@
 FROM ruby:2.3-alpine
 
-RUN su -c "gem install sass"
+# Install Sass and dependencies
+RUN apk add \
+    --update \
+    --no-cache \
+    --virtual build-dependencies \
+        ruby-dev \
+        libffi-dev \
+        build-base \
+    && gem install \
+        sass \
+    && apk del build-dependencies
 
 ENTRYPOINT ["sass"]
