--- a/app/config/sculpin_site.yml
+++ b/app/config/sculpin_site.yml
@@ -1,6 +1,6 @@
 title: Lucas van Lierop Blog
 subtitle: About software development, cars, music and more
-url: http://lucasvanlierop.nl
+url: https://lucasvanlierop.nl
 author: Lucas van Lierop
 email: me@lucasvanlierop.nl
 
